# nautilus_trader

./: .codespellignore  .dockerignore  .gitignore  .markdownlint.jsonc  .mypy_report.txt  .mypy_report_session.txt  .pre-commit-config.yaml  .ruff_report_session.txt  .secrets.baseline  .sqlfluff  ADDITIONAL_DATA_SOURCES.md  AGENT_PROMPTS.md  AGENT_TASK_FRAMEWORK.md  ARCHITECTURAL_DECISION_LOG.md  BASELINE_VARIANCE_ANALYSIS.md  CACHE_TIMESTAMP_CRITICAL_REVIEW.md  COMMIT_VALIDATION_REPORT.md  COVERAGE_PLAN.md  CRITICAL_SAFEGUARDS.md  DATA_REGISTRY_API_CHANGES.md  DATA_REGISTRY_FILE_REFERENCE.md  DECOMPOSITION_REMEDIATION_PLAN.md  FEATURE_ENGINEERING_METAMORPHIC_ANALYSIS.md  FEATURE_PARITY_PLAN.md  FEATURE_PARITY_QA_REPORT.md  FEATURE_PARITY_VALIDATION_REPORT.md  HANDOFF_FIXTURE_REFACTORING.txt  HANDOFF_NEXT_CLAUDE.md  HANDOFF_REMAINING_FAILURES.md  HANDOFF_TEST_SUITE_ANALYSIS.md  HANDOFF_TEST_TRIAGE.txt  INVESTIGATION_EXECUTIVE_SUMMARY.txt  INVESTIGATION_PROPERTY_TEST_REPORT.md  LEGACY_REMOVAL_PLAN.md  MASTER_ISSUES_REPORT.md  MESSAGE_BUS_CRITICAL_REVIEW.md  MIGRATION_RUNBOOK.md  ML_ACTOR_ANALYSIS_REPORT.md  ML_BASE_INFERENCE_ACTOR_PLAN.md  ML_CODEBASE_HEALTH_REPORT.md  (+111 more)
.archive/: FEATURE_ENGINEER_QA_REPORT.md  FEATURE_ENGINEER_VALIDATION_REPORT.md  FEATURE_PARITY_VALIDATION_REPORT.md  MLFLOW_MANAGER_VALIDATION_REPORT.md  ML_CONFIG_IMPLEMENTATION_FINAL.md  ML_MESSAGE_FLOW.md  ML_MIGRATION_RISKS.md  ML_MONITORING_QA_REPORT.md  ML_NEURAL_FORECAST_ANALYSIS.md  ML_POLARS_MSGSPEC_SOLUTION.md  ML_SIGNAL_ACTOR_QA_REPORT.md  ML_TRACKING_QA_REPORT.md  ML_XGBOOST_IMPLEMENTATION_EXAMPLE.md  ML_XGBOOST_IMPLEMENTATION_SUMMARY.md  PRECOMMIT_FIXES_SUMMARY.md  QA_REPORT_COLLECTORS.md  UNIFIED_XGBOOST_VALIDATION_REPORT.md  test_lightgbm_qa.py  test_ml_integration_qa.py  test_nautilus_setup.py
.codex/commands/: nautilus-init.md
.docker/: docker-compose.yml
.github/workflows/: build.yml  ml-microbench.yml  ml-prototype-phase2.yml  nightly.yml  phase3-monitoring.yml
.github/workflows_disabled/: README.md  ml-property-tests.yml  pre-commit.yml  sanity.yml
.nautilus/ml/: safe_populate_progress.json
.pre-commit-hooks/: check_docstrings.py  check_feature_parity.py  check_ml_performance.py  check_mypy_clean.py  check_nautilus_patterns.py  check_prometheus_metrics.py  check_test_coverage.py  check_test_coverage_general.py  check_tests_clean.py  check_tests_pass.py  check_todo_exclamation.sh  ratchet_coverage.py
archive/ml_redundant_scripts_2025_09/: README.md  populate_fred_data.py  test_databento_datasets.py  test_databento_scheduler.py
archive/prototypes_2025_09/: README.md
archive/redundant_scripts_2025_09/: README.md  enhanced_collector_smoke.py
checkpoints/: epoch=0-step=13913.ckpt  epoch=0-step=249.ckpt  epoch=2-step=600.ckpt
data/enhanced/: collection_metadata.json
data/fred/: metadata.json
data/registry/: data_registry.json
data/supplementary/: metadata.json
data/universe/: collection_log.json  collection_summary.csv  collection_summary.json  ml_universe_report.json  verified_collection_summary.json
docs/architecture/: ARCHITECTURAL_DECISION_LOG.md
docs/architecture_map/: MIGRATION_STATUS.md  README.md
docs/data/: ADDITIONAL_DATA_SOURCES.md
docs/developer_guide/: environment_setup.md
docs/examples/: distributed_tracing_example.py  earnings_pipeline_example.py  reproduce_feature_parity_bug.py  simple_feature_test.py  test_parameterization_example.py  (+1 more)
examples/: fred_examples.py  ml_actor_dummy_example.py  ml_actor_postgres_example.py  ml_signal_actor_example.py  ml_xgboost_training_example.py  monitoring_example.py
ml/: CRITICAL_FIXES_CHECKLIST.md  DATABENTO_INTEGRATION_SUMMARY.md  DRY_RUN_CHECKLIST.md  DTYPE_POLICY_CLARIFIED.md  DUPLICATION_REPORT.md  ENGINE_MANAGER_UPDATE.md  FIXES_SUMMARY.md  FIX_SUMMARY.md  ISSUES_CONSOLIDATED.md  MIGRATION_TO_INTEGRATED.md  ML_INTEGRATION_OVERVIEW.md  PIPELINE_DOCUMENTATION.md  PRODUCTION_DEPLOYMENT.md  QA_TEST_REPORT.md  REAL_SYSTEM_TEST_PLAN.md  REFACTORING_ACTION_PLAN.md  REFACTORING_SUMMARY.md  REORGANIZATION_SUMMARY.md  SECURITY_POSTURE_SUMMARY.md  SIMPLE_SUMMARY.md  TESTS_COVERAGE_SUMMARY.md  TEST_FIX_SUMMARY.md  __init__.py  _imports.py  api_analysis.md  conftest.py  constants.py  docker-compose.dev.yml  docker-compose.yml  filtered_api_index.json  fix_test_configs.py  ml_health_sprint.md  ml_types.py  public_api_index.json  pytest.ini  refactoring_plan.md  schema.py  test_feature_claims.py  test_l2_aggregation_fix.py  test_microstructure_validation.py  (+4 more)
ml_registry/: audit_log.jsonl  data_registry.json  feature_registry.json
playground/: 3D_Risk_Model_Idea.md  3D_Risk_Model_Roadmap.md  3d_risk_architecture.md  Multi_factor_risk_modeling.md  __init__.py  codex_handoff_prompt.md  portfolio-3d-risk.html
python/: pyproject.toml
reports/: PHASE_0_COMPLETION_CERTIFICATE.md  PHASE_1_COMPLETION_CERTIFICATE.md  PHASE_1_STATUS_REPORT.md  PHASE_2_1_COMPLETION_CERTIFICATE.md  PHASE_2_2_COMPLETION_CERTIFICATE.md  PHASE_2_3_COMPLETION_CERTIFICATE.md  PHASE_3_1_COMPLETION_CERTIFICATE.md  VALIDATION_SUMMARY.md
scripts/: check_code_quality.py  download_alfred_vintages.py  enhanced_collector_smoke.py  nautilus_spinner.py  wait_for_postgres.py
tasks/: phase_0_1_remove_stores_actors_import.md  phase_0_2_extract_dataset_constants.md  phase_0_3_remove_actor_store_reexports.md  phase_1_1_centralize_db_engine.md  phase_1_2_table_schema_factory.md  phase_1_3_standardize_error_handling.md  phase_2_1_datastore_decomposition.md  phase_2_2_mlpipeline_orchestrator_decomposition.md  phase_2_3_COMPLETION_SUMMARY.md  phase_2_3_ab_testing_manager_task_report.md  phase_2_3_canary_deployment_manager_task_report.md  phase_2_3_facade_task_report.md  phase_2_3_model_deployment_manager_task_report.md  phase_2_3_model_registry_decomposition.md
test_output/: test_model.pkl
tests/: conftest.py
tools/: analyze_api.py  analyze_test_failures.py  api_index.py  data_analysis.py  filter_api_index.py  mypy_step.ini  restoration_dashboard.py  validate_event_constants.py  validate_fixture_plugins.py  validate_metrics_bootstrap.py  wait_for_postgres.py
(+3361 files in other folders)
