[project]
name = "nautilus_trader"
version = "1.220.0"
description = "A high-performance algorithmic trading platform and event-driven backtester"
authors = [
    {name = "Nautech Systems", email = "info@nautechsystems.io"},
]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
]
license = {text = "LGPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiohttp>=3.11.18",
    "click>=8.0.0,<9.0.0",
    "fsspec>=2025.2.0,<2026.0.0",
    "msgspec>=0.19.0,<1.0.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3,<3.0.0",
    "portion>=2.6.1",
    "pyarrow>=20.0.0",
    "pytz>=2025.1.0",
    "tqdm>=4.67.1,<5.0.0",
    "uvloop>=0.21.0,<1.0.0; sys_platform != \"win32\" and sys_platform != \"cygwin\" and platform_python_implementation != \"PyPy\"",
    "skl2onnx (>=1.19.1,<2.0.0)",
    "onnxmltools (>=1.14.0,<2.0.0)",
    "polars (>=1.32.2,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "starlette (>=0.47.2,<0.48.0)",
    "uvicorn[standard] (>=0.36.0,<0.38.0)",
    "prometheus-client (>=0.22.1,<0.23.0)",
    "mlflow (>=3.2.0,<4.0.0)",
    "openai (>=1.99.6,<2.0.0)",
    "mcp[cli] (>=1.12.4,<2.0.0)",
    "anyio (>=4.10.0,<5.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pytorch-forecasting==1.4.0",
    "lightning==2.5.4",
    "torchmetrics==1.8.1",
    "tabulate (>=0.9.0,<0.10.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "pandas-market-calendars (>=5.1.1,<6.0.0)",
    "databento (>=0.62.0,<0.63.0)",
    "fredapi (>=0.5.2,<0.6.0)",
    # test-only/QA tools are defined under [tool.poetry.group.test.dependencies]
    "pandera (>=0.26.1,<0.27.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "edgartools (>=4.16.1,<5.0.0)"
]

[project.urls]
homepage = "https://nautilustrader.io"
repository = "https://github.com/nautechsystems/nautilus_trader"
docs = "https://nautilustrader.io/docs"

# For now we use the poetry build backend until uv supports custom build scripts
[build-system]
requires = [
    "setuptools>=80",
    "poetry-core>=2.1.3",
    "numpy>=1.26.4",
    "cython==3.1.2",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = [
    # Rust source must be included in the source distributions
    { path = "crates/*", format = "sdist" },
    { path = "Cargo.lock", format = "sdist" },
    { path = "Cargo.toml", format = "sdist" },
    # Compiled extensions must be included in the wheel distributions
    { path = "nautilus_trader/**/*.so", format = "wheel" },
    { path = "nautilus_trader/**/*.pyd", format = "wheel" },
    # Include the py.typed file for type checking support
    { path = "nautilus_trader/py.typed", format = "sdist" },
    { path = "nautilus_trader/py.typed", format = "wheel" },
    # Include Python interface files for type checking support
    { path = "nautilus_trader/**/*.pyi", format = "sdist" },
    { path = "nautilus_trader/**/*.pyi", format = "wheel" },
]

[tool.poetry.scripts]
ml-teacher-tft = "ml.training.teacher.tft_cli:main"
ml-student-lightgbm = "ml.training.student.lightgbm_cli:main"
ml-train-chronos = "ml.cli.train_chronos:main"

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = ">=1.26.4"
pandas = ">=2.2.3,<3.0.0"
pyarrow = ">=20.0.0"
pytz = ">=2025.1.0"
tqdm = ">=4.67.1,<5.0.0"
mcp = {version = ">=1.16.0,<2.0.0", extras = ["cli"]}
uvicorn = {version = ">=0.36.0,<0.38.0", extras = ["standard"]}

[tool.poetry.group.nautilus]
optional = false

[tool.poetry.group.nautilus.dependencies]
aiohttp = ">=3.11.18"
anyio = ">=4.10.0,<5.0.0"
click = ">=8.0.0,<9.0.0"
fsspec = ">=2025.2.0,<2026.0.0"
msgspec = ">=0.19.0,<1.0.0"
openai = ">=1.99.6,<2.0.0"
portion = ">=2.6.1"
python-dotenv = ">=1.0.0,<2.0.0"
sqlalchemy = ">=2.0.43,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
starlette = ">=0.47.2,<0.48.0"
uvloop = {version = ">=0.21.0,<1.0.0", markers = "sys_platform != 'win32' and sys_platform != 'cygwin' and platform_python_implementation != 'PyPy'"}

[tool.poetry.group.ml]
optional = false

[tool.poetry.group.ml.dependencies]
databento = ">=0.62.0,<0.63.0"
edgartools = "^4.16.1"
fredapi = ">=0.5.2,<0.6.0"
lightgbm = ">=4.6.0,<5.0.0"
lightning = "==2.5.4"
mlflow = ">=3.2.0,<4.0.0"
onnxmltools = ">=1.14.0,<2.0.0"
onnxruntime = ">=1.20.0,<2.0.0"
optuna = ">=3.4.0,<4.0.0"
polars = ">=1.32.2,<2.0.0"
prometheus-client = ">=0.22.1,<0.23.0"
redis = ">=5.0.0,<6.0.0"
pandas-market-calendars = ">=5.1.1,<6.0.0"
pytorch-forecasting = "==1.4.0"
scikit-learn = ">=1.3.0,<2.0.0"
skl2onnx = ">=1.19.1,<2.0.0"
tabulate = ">=0.9.0,<0.10.0"
torchmetrics = "==1.8.1"
xgboost = ">=2.1.0,<3.0.0"
autogluon-timeseries = ">=1.2.0,<2.0.0"
yfinance = "^0.2.66"
opentelemetry-api = ">=1.27.0,<2.0.0"
opentelemetry-sdk = ">=1.27.0,<2.0.0"
opentelemetry-exporter-otlp-proto-grpc = ">=1.27.0,<2.0.0"
[tool.poetry.group.dev.dependencies]
pandera = "^0.26.1"
allpairspy = "^2.5.1"
semgrep = "<1.83.0"
import-linter = "^2.0.0"
xenon = "^0.9.3"
pylint = "^3.2.7"
bandit = "^1.7.9"
detect-secrets = "^1.5.0"
vulture = "^2.14"
sqlfluff = "^3.1.0"
black = ">=25.1.0,<26.0.0"
docformatter = ">=1.7.7,<2.0.0"
mypy = ">=1.17.1,<2.0.0"
protobuf = "==5.29.1"
pre-commit = ">=4.3.0,<5.0.0"
requests = ">=2.32.4,<3.0.0"
ruff = ">=0.12.8,<1.0.0"
types-pytz = ">=2024.2,<2025.0"
types-requests = ">=2.32,<3.0"
types-toml = ">=0.10.2,<1.0.0"
pandas-stubs = ">=2.3.0,<3.0.0"
cython = "==3.1.2"
setuptools = ">=75"

[tool.poetry.group.test.dependencies]
# Pin a stable, mutually compatible set of pytest plugins
pytest = "~=7.4.4"
pytest-aiohttp = "~=1.1.0"
pytest-asyncio = "~=0.21.1"  # stable with pytest 7.4
pytest-benchmark = "~=4.0"
pytest-cov = "~=4.1"
pytest-mock = "~=3.14"
pytest-timeout = "~=2.2"
pytest-xdist = {version = "~=3.5", extras = ["psutil"]}
pytest-env = "~=0.8"  # enable [pytest] env section
coverage = "~=7.5"
hypothesis = "~=6.138"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = [
    "."
]
testpaths = [
    "ml/tests"
]
norecursedirs = [
    ".*",
    "build",
    "dist",
    "node_modules",
    "venv",
    "python",
    "python/examples",
    ".libraries",
    "tests/unit_tests/indicators",
]

[project.optional-dependencies]
betfair = [
    "betfair-parser==0.14.4",
]
ib = [
    "defusedxml>=0.7.1,<1.0.0",
    "nautilus-ibapi==10.30.1",
]
docker = [
    "docker>=7.1.0,<8.0.0",
]
dydx = [
    "v4-proto==7.0.5",
    "grpcio==1.68.1",
    "protobuf==5.29.1",
    "bech32>=1.2.0,<2.0.0",
    "ecdsa>=0.19.0,<1.0.0",
    "bip-utils>=2.9.3,<3.0.0",
    "pycryptodome>=3.20.0,<4.0.0",
]
polymarket = [
    "py-clob-client==0.23.0,<1.0.0",  # Pinned to 0.23.0 for stability
]
ml = [
    # Core ML frameworks (currently used)
    "lightgbm>=3.3.0,<5.0.0",
    "mlflow>=2.22.1",
    "onnxruntime>=1.20.0,<2.0.0",
    "optuna>=3.4.0,<4.0.0",
    "polars>=1.17.0,<2.0.0",
    "prometheus-client>=0.21.0,<1.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "xgboost>=2.1.0,<3.0.0",
    # ONNX export tools
    "onnxmltools>=1.12.0,<2.0.0",
    "skl2onnx>=1.15.0,<2.0.0",
]
ml-advanced = [
    # Time series and statistical models
    "arch>=7.2.0,<8.0.0",
    "statsmodels>=0.14.0,<1.0.0",
    # Online learning
    "river>=0.22.0,<1.0.0",
    # Regime detection and change-point
    "hmmlearn>=0.3.0,<1.0.0",
    "ruptures>=1.1.0,<2.0.0",
    # Optimization
    "cvxpy>=1.6.0,<2.0.0",
    # Distributed ML and serving
    "ray[tune,serve]>=2.10.0,<3.0.0",
    # Model monitoring
    "evidently>=0.5.0,<1.0.0",
]
ml-graph = [
    # Graph neural networks (mentioned in ML_GENERAL.md)
    "torch>=2.0.0,<3.0.0",
    "torch-geometric>=2.5.0,<3.0.0",
]
ml-forecasting = [
    # Advanced forecasting libraries from ML_GENERAL.md
    "statsforecast>=2.0.0,<3.0.0",
    "neuralforecast>=2.0.0,<3.0.0",
]
ml-tft = [
    # Temporal Fusion Transformer training stack
    "lightning>=2.5,<3.0",
    "torchmetrics>=1.2,<2.0",
    # pytorch-forecasting is already added separately by the project setup
]
ml-causal = [
    # Causal inference (mentioned in ML_GENERAL.md)
    "econml>=0.15.0,<1.0.0",
    "causalml>=0.14.0,<1.0.0",
]
ml-bayesian = [
    # Bayesian modeling (mentioned in ML_GENERAL.md)
    "pymc>=5.0.0,<6.0.0",
    "cmdstanpy>=1.2.0,<2.0.0",
]
ml-rl = [
    # Reinforcement learning for execution
    "ray[rllib]>=2.10.0,<3.0.0",
]

## NOTE: Poetry is the authoritative dependency manager. uv "dependency-groups" removed to prevent drift.

[tool.isort]  # Used by legacy isort for Cython modules
py_version = "311"
skip_glob = ["**/core/rust/*"]
combine_as_imports = true
line_length = 100
ensure_newline_before_comments = true
force_single_line = true
include_trailing_comma = true
multi_line_output = 3
lines_after_imports = 2
use_parentheses = true
filter_files = true

[tool.black]
target_version = ["py311", "py312"]
line_length = 100

# NOTE: mypy configuration exists above; do not duplicate keys. Strictness is enforced per overrides.

[tool.docformatter]
black = true
make-summary-multi-line = true
pre-summary-new-line = true
blank = true
recursive = true
in-place = true

[tool.ruff]
target-version = "py311"
line-length = 150  # Reduce to 100

exclude = [
    ".benchmarks",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "venv",
    "archive",
    "examples",
    "tools",
]

[tool.ruff.lint]
select = [
    "C4",
    "E",
    "F",
    "W",
    "C90",
    "D",
    # "DTZ",
    "UP",
    "S",
    "T10",
    "ICN",
    "PIE",
    # "PT",
    "PYI",
    "Q",
    "I",
    "RSE",
    "TID",
    # "SIM",
    # "ARG",
    # "ERA",
    "PD",
    # "PGH",
    # "PLW",
    "NPY",
    "RUF",
]

ignore = [
    "D100",  # Missing docstring in public module  **fix**
    "D101",
    "D102",  # Missing docstring in public method  **fix**
    "D103",  # Missing docstring in public function  **fix**
    "D104",  # Missing docstring in public package  **fix**
    "D107",
    "D105",
    "D200",  # One-line docstring should fit on one line with quotes (optional style)
    "D203",  # 1 blank line required before class docstring (optional style)
    "D205",  # 1 blank line required between summary line and description (optional style)
    "D212",  # Multi-line docstring summary should start at the first line (optional style)
    "D400",  # First line should end with a period (not always a first line)
    "D413",  # Missing blank line after last section ('Parameters')
    "D415",  # First line should end with a period, question mark, or exclamation point (not always a first line)
    "D416",  # Section name should end with a colon ('Warnings:', not 'Warnings') (incorrect?)
    "E741",  # Ambiguous variable name (single char)
    "PYI021", # Docstrings should not be included in stubs (OK as this is the natural place for them)
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "S101",  # Use of assert detected (OK in test suite)
    "S105",  # Use of hard-coded password (spurious)
    "S106",  # Use of hard-coded password (spurious)
    "S113",  # Probable use of requests call without timeout **fix**
    "S603",  # `subprocess` call: check for execution of untrusted input **fix**
    "C901",
    "D401",
    "D417",
    "S110",
    "S311",
    "S607",
    "S608",
    "RUF002",
    "RUF003",
    "RUF005",
    "PYI046",
    "PYI036",
    "F842",
    "ICN001",
    "PIE804",
    "RUF034",
    "C416",
    "S310",
    "PD010",
    "S112",
    "C408",
    "S108",
    "E501",
    "RUF006",
    "S103",
    "NPY002",
]

# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]

unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
force-single-line = true
single-line-exclusions = ["typing"]
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"test_perf_logger.py" = ["S311"]
"ml/tests/*" = [
    "NPY002",
    "F841",
    "F401",
    "F821",
    "E712",
    "D",      # Relax docstring rules in tests
    "C401",   # Generator/set comprehensions nits
    "C405",   # Unnecessary list literal for set
    "TID252", # Absolute import preference
    "UP035",  # typing.List -> list (tests only)
    "E402",   # Imports not at top in some fixtures
    "I001",   # Minor import sorting for tests
    "RUF100", # Unused noqa directives in some tests
    "PIE810", # startswith tuple grouping in tests
]
"ml/data/tft_dataset_builder.py" = ["PD901"]

[tool.mypy]
python_version = "3.11"
disallow_incomplete_defs = true
explicit_package_bases = true
ignore_missing_imports = true
namespace_packages = true
no_strict_optional = false
warn_no_return = true
warn_unused_configs = true
warn_unused_ignores = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
no_strict_optional = true
module = [
    "examples/*",
    "nautilus_trader/adapters/betfair/*",
    "nautilus_trader/adapters/binance/*",
    "nautilus_trader/adapters/interactive_brokers/*",
    "nautilus_trader/indicators/ta_lib/*",
]



# SQLAlchemy-specific overrides for registry persistence
[[tool.mypy.overrides]]
module = "ml.registry.persistence"
# These are SQLAlchemy-specific issues that are false positives
# The ORM converts Column types to actual values at runtime
disable_error_code = [
    "misc",  # For "Class cannot subclass Base (has type Any)"
    "arg-type",  # For create_engine argument type issues
]

[[tool.mypy.overrides]]
module = [
    "ml.registry.model_registry",
    "ml.registry.feature_registry",
    "ml.registry.strategy_registry",
]
# SQLAlchemy Column to value conversion issues
# At runtime, Column[str] becomes str, but mypy can't know this
disable_error_code = [
    "arg-type",  # For Column[T] -> T conversion in constructors
    "assignment",  # For value -> Column[T] assignments
    "union-attr",  # For Column[T] | T union attribute access
]

# (Removed ignores on ml/* to enforce strict typing across ML modules)

[[tool.mypy.overrides]]
module = [
    "ml.common.message_bus",
    "ml.monitoring.grafana_client",
    "ml.consumers.redis_streams_consumer",
]
disable_error_code = [
    "import-untyped",
]

[[tool.mypy.overrides]]
module = [
    "ml.models.save_dummy_model",
]
disable_error_code = [
    "import-untyped",
]

# (Removed special-case disables for ml.core.integration)

# (Removed ignore on ml.observability.tracing)

# (Removed ignore on ml.data.__init__)

# (Removed broad ignore on multiple ml.* modules)

[[tool.mypy.overrides]]
module = [
    "ml.data.loaders.fred_loader",
]
disable_error_code = [
    "no-any-return",
    "redundant-cast",
]

[[tool.mypy.overrides]]
module = [
    "ml.registry_backup.*",
    "ml.features_backup_phase5.*",
    "ml.stores_backup_phase3.*",
    "ml.orchestration_backup_phase2.*",
    "ml.actors_backup_phase4.*",
    "ml.scripts.compare_streaming_cohorts",
]
ignore_errors = true

# Relax strictness for test modules to preserve velocity while keeping
# production ML code under strict typing. Tests often use dynamic mocks,
# pytest fixtures, and untyped helpers that aren't worth fully annotating.
[[tool.mypy.overrides]]
module = [
    "ml.tests.*",
]
strict = false
disallow_untyped_defs = false
disallow_untyped_calls = false
check_untyped_defs = false
warn_return_any = false
# Keep this on to prevent stale ignores from accumulating in tests.
warn_unused_ignores = true
ignore_errors = true

# Skip Nautilus Trader core modules when running strict checks on ml/.
[[tool.mypy.overrides]]
module = [
    "nautilus_trader.*",
]
ignore_errors = true

# (Removed ignores on ml.actors.signal, ml.deployment.*, and test modules)

## NOTE: Pytest configuration is centralized in ml/pytest.ini to avoid duplication.

[tool.coverage.run]
plugins = ["Cython.Coverage"]
source = ["nautilus_trader", "ml", "playground"]
omit = [
    "nautilus_trader/adapters/*",
    "nautilus_trader/examples/*",
    "nautilus_trader/test_kit/*",
    "ml/tests/*",
    "ml/examples/*",
    "ml/docs/*",
    "playground/tests/*",
    "playground/docs/*",
]
branch = true
parallel = false

[tool.coverage.report]
fail_under = 0
show_missing = true
precision = 2
skip_covered = false
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.ml]
# ML-specific coverage requirements
target = 90
fail_under = 80
